// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PaginatedTable Snapshot Tests renders basic table with default props 1`] = `
<div
  class="w-full "
>
  <div
    class="md:hidden mb-4 flex items-center justify-between bg-white p-4 rounded-lg border border-gray-200 shadow-sm"
  >
    <span
      class="text-sm font-medium text-gray-700"
    >
      Sort by:
    </span>
    <select
      class="text-sm border border-gray-300 rounded-md px-3 py-1 focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-transparent"
    >
      <option
        value=""
      >
        No sorting
      </option>
      <option
        value="id"
      >
        ID
      </option>
      <option
        value="name"
      >
        Name
      </option>
    </select>
  </div>
  <div
    class="hidden md:block overflow-x-auto shadow-sm border border-gray-200 rounded-lg"
  >
    <table
      class="min-w-full divide-y divide-gray-200"
    >
      <thead
        class="bg-gray-50"
      >
        <tr>
          <th
            class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider cursor-pointer hover:bg-gray-100 "
          >
            <div
              class="flex items-center space-x-1"
            >
              <span>
                ID
              </span>
              <div
                class="flex flex-col"
              >
                <svg
                  aria-hidden="true"
                  class="w-3 h-3 text-gray-400"
                  fill="currentColor"
                  viewBox="0 0 20 20"
                >
                  <path
                    clip-rule="evenodd"
                    d="M14.707 12.707a1 1 0 01-1.414 0L10 9.414l-3.293 3.293a1 1 0 01-1.414-1.414l4-4a1 1 0 011.414 0l4 4a1 1 0 010 1.414z"
                    fill-rule="evenodd"
                  />
                </svg>
                <svg
                  aria-hidden="true"
                  class="w-3 h-3 -mt-1 text-gray-400"
                  fill="currentColor"
                  viewBox="0 0 20 20"
                >
                  <path
                    clip-rule="evenodd"
                    d="M5.293 7.293a1 1 0 011.414 0L10 10.586l3.293-3.293a1 1 0 111.414 1.414l-4 4a1 1 0 01-1.414 0l-4-4a1 1 0 010-1.414z"
                    fill-rule="evenodd"
                  />
                </svg>
              </div>
            </div>
          </th>
          <th
            class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider cursor-pointer hover:bg-gray-100 "
          >
            <div
              class="flex items-center space-x-1"
            >
              <span>
                Name
              </span>
              <div
                class="flex flex-col"
              >
                <svg
                  aria-hidden="true"
                  class="w-3 h-3 text-gray-400"
                  fill="currentColor"
                  viewBox="0 0 20 20"
                >
                  <path
                    clip-rule="evenodd"
                    d="M14.707 12.707a1 1 0 01-1.414 0L10 9.414l-3.293 3.293a1 1 0 01-1.414-1.414l4-4a1 1 0 011.414 0l4 4a1 1 0 010 1.414z"
                    fill-rule="evenodd"
                  />
                </svg>
                <svg
                  aria-hidden="true"
                  class="w-3 h-3 -mt-1 text-gray-400"
                  fill="currentColor"
                  viewBox="0 0 20 20"
                >
                  <path
                    clip-rule="evenodd"
                    d="M5.293 7.293a1 1 0 011.414 0L10 10.586l3.293-3.293a1 1 0 111.414 1.414l-4 4a1 1 0 01-1.414 0l-4-4a1 1 0 010-1.414z"
                    fill-rule="evenodd"
                  />
                </svg>
              </div>
            </div>
          </th>
          <th
            class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider  "
          >
            <div
              class="flex items-center space-x-1"
            >
              <span>
                Email
              </span>
            </div>
          </th>
        </tr>
      </thead>
      <tbody
        class="bg-white divide-y divide-gray-200"
      >
        <tr
          class="hover:bg-gray-50 transition-colors duration-150"
        >
          <td
            class="px-6 py-4 whitespace-nowrap text-sm text-gray-900 "
          >
            1
          </td>
          <td
            class="px-6 py-4 whitespace-nowrap text-sm text-gray-900 "
          >
            John Doe
          </td>
          <td
            class="px-6 py-4 whitespace-nowrap text-sm text-gray-900 "
          >
            john@example.com
          </td>
        </tr>
        <tr
          class="hover:bg-gray-50 transition-colors duration-150"
        >
          <td
            class="px-6 py-4 whitespace-nowrap text-sm text-gray-900 "
          >
            2
          </td>
          <td
            class="px-6 py-4 whitespace-nowrap text-sm text-gray-900 "
          >
            Jane Smith
          </td>
          <td
            class="px-6 py-4 whitespace-nowrap text-sm text-gray-900 "
          >
            jane@example.com
          </td>
        </tr>
        <tr
          class="hover:bg-gray-50 transition-colors duration-150"
        >
          <td
            class="px-6 py-4 whitespace-nowrap text-sm text-gray-900 "
          >
            3
          </td>
          <td
            class="px-6 py-4 whitespace-nowrap text-sm text-gray-900 "
          >
            Bob Johnson
          </td>
          <td
            class="px-6 py-4 whitespace-nowrap text-sm text-gray-900 "
          >
            bob@example.com
          </td>
        </tr>
      </tbody>
    </table>
  </div>
  <div
    class="md:hidden space-y-4"
  >
    <div
      class="bg-white rounded-lg border border-gray-200 shadow-sm p-4 space-y-3"
    >
      <div
        class="flex justify-between items-start"
      >
        <span
          class="text-sm font-medium text-gray-500 min-w-0 flex-1"
        >
          ID
          :
        </span>
        <span
          class="text-sm text-gray-900 text-right min-w-0 flex-1 ml-2"
        >
          1
        </span>
      </div>
      <div
        class="flex justify-between items-start"
      >
        <span
          class="text-sm font-medium text-gray-500 min-w-0 flex-1"
        >
          Name
          :
        </span>
        <span
          class="text-sm text-gray-900 text-right min-w-0 flex-1 ml-2"
        >
          John Doe
        </span>
      </div>
      <div
        class="flex justify-between items-start"
      >
        <span
          class="text-sm font-medium text-gray-500 min-w-0 flex-1"
        >
          Email
          :
        </span>
        <span
          class="text-sm text-gray-900 text-right min-w-0 flex-1 ml-2"
        >
          john@example.com
        </span>
      </div>
    </div>
    <div
      class="bg-white rounded-lg border border-gray-200 shadow-sm p-4 space-y-3"
    >
      <div
        class="flex justify-between items-start"
      >
        <span
          class="text-sm font-medium text-gray-500 min-w-0 flex-1"
        >
          ID
          :
        </span>
        <span
          class="text-sm text-gray-900 text-right min-w-0 flex-1 ml-2"
        >
          2
        </span>
      </div>
      <div
        class="flex justify-between items-start"
      >
        <span
          class="text-sm font-medium text-gray-500 min-w-0 flex-1"
        >
          Name
          :
        </span>
        <span
          class="text-sm text-gray-900 text-right min-w-0 flex-1 ml-2"
        >
          Jane Smith
        </span>
      </div>
      <div
        class="flex justify-between items-start"
      >
        <span
          class="text-sm font-medium text-gray-500 min-w-0 flex-1"
        >
          Email
          :
        </span>
        <span
          class="text-sm text-gray-900 text-right min-w-0 flex-1 ml-2"
        >
          jane@example.com
        </span>
      </div>
    </div>
    <div
      class="bg-white rounded-lg border border-gray-200 shadow-sm p-4 space-y-3"
    >
      <div
        class="flex justify-between items-start"
      >
        <span
          class="text-sm font-medium text-gray-500 min-w-0 flex-1"
        >
          ID
          :
        </span>
        <span
          class="text-sm text-gray-900 text-right min-w-0 flex-1 ml-2"
        >
          3
        </span>
      </div>
      <div
        class="flex justify-between items-start"
      >
        <span
          class="text-sm font-medium text-gray-500 min-w-0 flex-1"
        >
          Name
          :
        </span>
        <span
          class="text-sm text-gray-900 text-right min-w-0 flex-1 ml-2"
        >
          Bob Johnson
        </span>
      </div>
      <div
        class="flex justify-between items-start"
      >
        <span
          class="text-sm font-medium text-gray-500 min-w-0 flex-1"
        >
          Email
          :
        </span>
        <span
          class="text-sm text-gray-900 text-right min-w-0 flex-1 ml-2"
        >
          bob@example.com
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`PaginatedTable Snapshot Tests renders empty table 1`] = `
<div
  class="w-full "
>
  <div
    class="md:hidden mb-4 flex items-center justify-between bg-white p-4 rounded-lg border border-gray-200 shadow-sm"
  >
    <span
      class="text-sm font-medium text-gray-700"
    >
      Sort by:
    </span>
    <select
      class="text-sm border border-gray-300 rounded-md px-3 py-1 focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-transparent"
    >
      <option
        value=""
      >
        No sorting
      </option>
      <option
        value="id"
      >
        ID
      </option>
      <option
        value="name"
      >
        Name
      </option>
    </select>
  </div>
  <div
    class="hidden md:block overflow-x-auto shadow-sm border border-gray-200 rounded-lg"
  >
    <table
      class="min-w-full divide-y divide-gray-200"
    >
      <thead
        class="bg-gray-50"
      >
        <tr>
          <th
            class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider cursor-pointer hover:bg-gray-100 "
          >
            <div
              class="flex items-center space-x-1"
            >
              <span>
                ID
              </span>
              <div
                class="flex flex-col"
              >
                <svg
                  aria-hidden="true"
                  class="w-3 h-3 text-gray-400"
                  fill="currentColor"
                  viewBox="0 0 20 20"
                >
                  <path
                    clip-rule="evenodd"
                    d="M14.707 12.707a1 1 0 01-1.414 0L10 9.414l-3.293 3.293a1 1 0 01-1.414-1.414l4-4a1 1 0 011.414 0l4 4a1 1 0 010 1.414z"
                    fill-rule="evenodd"
                  />
                </svg>
                <svg
                  aria-hidden="true"
                  class="w-3 h-3 -mt-1 text-gray-400"
                  fill="currentColor"
                  viewBox="0 0 20 20"
                >
                  <path
                    clip-rule="evenodd"
                    d="M5.293 7.293a1 1 0 011.414 0L10 10.586l3.293-3.293a1 1 0 111.414 1.414l-4 4a1 1 0 01-1.414 0l-4-4a1 1 0 010-1.414z"
                    fill-rule="evenodd"
                  />
                </svg>
              </div>
            </div>
          </th>
          <th
            class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider cursor-pointer hover:bg-gray-100 "
          >
            <div
              class="flex items-center space-x-1"
            >
              <span>
                Name
              </span>
              <div
                class="flex flex-col"
              >
                <svg
                  aria-hidden="true"
                  class="w-3 h-3 text-gray-400"
                  fill="currentColor"
                  viewBox="0 0 20 20"
                >
                  <path
                    clip-rule="evenodd"
                    d="M14.707 12.707a1 1 0 01-1.414 0L10 9.414l-3.293 3.293a1 1 0 01-1.414-1.414l4-4a1 1 0 011.414 0l4 4a1 1 0 010 1.414z"
                    fill-rule="evenodd"
                  />
                </svg>
                <svg
                  aria-hidden="true"
                  class="w-3 h-3 -mt-1 text-gray-400"
                  fill="currentColor"
                  viewBox="0 0 20 20"
                >
                  <path
                    clip-rule="evenodd"
                    d="M5.293 7.293a1 1 0 011.414 0L10 10.586l3.293-3.293a1 1 0 111.414 1.414l-4 4a1 1 0 01-1.414 0l-4-4a1 1 0 010-1.414z"
                    fill-rule="evenodd"
                  />
                </svg>
              </div>
            </div>
          </th>
          <th
            class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider  "
          >
            <div
              class="flex items-center space-x-1"
            >
              <span>
                Email
              </span>
            </div>
          </th>
        </tr>
      </thead>
      <tbody
        class="bg-white divide-y divide-gray-200"
      >
        <tr>
          <td
            class="px-6 py-8 text-center text-gray-500"
            colspan="3"
          >
            No data available
          </td>
        </tr>
      </tbody>
    </table>
  </div>
  <div
    class="md:hidden space-y-4"
  >
    <div
      class="text-center py-8 text-gray-500 bg-white rounded-lg border border-gray-200"
    >
      No data available
    </div>
  </div>
</div>
`;

exports[`PaginatedTable Snapshot Tests renders loading state 1`] = `
<div
  class="w-full "
>
  <div
    class="animate-pulse"
  >
    <div
      class="hidden md:block"
    >
      <div
        class="h-10 bg-gray-200 rounded mb-4"
      />
      <div
        class="h-8 bg-gray-100 rounded mb-2"
      />
      <div
        class="h-8 bg-gray-100 rounded mb-2"
      />
      <div
        class="h-8 bg-gray-100 rounded mb-2"
      />
      <div
        class="h-8 bg-gray-100 rounded mb-2"
      />
      <div
        class="h-8 bg-gray-100 rounded mb-2"
      />
      <div
        class="h-8 bg-gray-100 rounded mb-2"
      />
      <div
        class="h-8 bg-gray-100 rounded mb-2"
      />
      <div
        class="h-8 bg-gray-100 rounded mb-2"
      />
      <div
        class="h-8 bg-gray-100 rounded mb-2"
      />
      <div
        class="h-8 bg-gray-100 rounded mb-2"
      />
    </div>
    <div
      class="md:hidden space-y-4"
    >
      <div
        class="h-16 bg-gray-200 rounded mb-4"
      />
      <div
        class="h-32 bg-gray-100 rounded"
      />
      <div
        class="h-32 bg-gray-100 rounded"
      />
      <div
        class="h-32 bg-gray-100 rounded"
      />
      <div
        class="h-32 bg-gray-100 rounded"
      />
      <div
        class="h-32 bg-gray-100 rounded"
      />
      <div
        class="h-32 bg-gray-100 rounded"
      />
      <div
        class="h-32 bg-gray-100 rounded"
      />
      <div
        class="h-32 bg-gray-100 rounded"
      />
      <div
        class="h-32 bg-gray-100 rounded"
      />
      <div
        class="h-32 bg-gray-100 rounded"
      />
    </div>
  </div>
</div>
`;

exports[`PaginatedTable Snapshot Tests renders table with custom column rendering 1`] = `
<div
  class="w-full "
>
  <div
    class="md:hidden mb-4 flex items-center justify-between bg-white p-4 rounded-lg border border-gray-200 shadow-sm"
  >
    <span
      class="text-sm font-medium text-gray-700"
    >
      Sort by:
    </span>
    <select
      class="text-sm border border-gray-300 rounded-md px-3 py-1 focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-transparent"
    >
      <option
        value=""
      >
        No sorting
      </option>
      <option
        value="id"
      >
        ID
      </option>
      <option
        value="name"
      >
        Full Name
      </option>
    </select>
  </div>
  <div
    class="hidden md:block overflow-x-auto shadow-sm border border-gray-200 rounded-lg"
  >
    <table
      class="min-w-full divide-y divide-gray-200"
    >
      <thead
        class="bg-gray-50"
      >
        <tr>
          <th
            class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider cursor-pointer hover:bg-gray-100 text-center"
          >
            <div
              class="flex items-center space-x-1"
            >
              <span>
                ID
              </span>
              <div
                class="flex flex-col"
              >
                <svg
                  aria-hidden="true"
                  class="w-3 h-3 text-gray-400"
                  fill="currentColor"
                  viewBox="0 0 20 20"
                >
                  <path
                    clip-rule="evenodd"
                    d="M14.707 12.707a1 1 0 01-1.414 0L10 9.414l-3.293 3.293a1 1 0 01-1.414-1.414l4-4a1 1 0 011.414 0l4 4a1 1 0 010 1.414z"
                    fill-rule="evenodd"
                  />
                </svg>
                <svg
                  aria-hidden="true"
                  class="w-3 h-3 -mt-1 text-gray-400"
                  fill="currentColor"
                  viewBox="0 0 20 20"
                >
                  <path
                    clip-rule="evenodd"
                    d="M5.293 7.293a1 1 0 011.414 0L10 10.586l3.293-3.293a1 1 0 111.414 1.414l-4 4a1 1 0 01-1.414 0l-4-4a1 1 0 010-1.414z"
                    fill-rule="evenodd"
                  />
                </svg>
              </div>
            </div>
          </th>
          <th
            class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider cursor-pointer hover:bg-gray-100 "
          >
            <div
              class="flex items-center space-x-1"
            >
              <span>
                Full Name
              </span>
              <div
                class="flex flex-col"
              >
                <svg
                  aria-hidden="true"
                  class="w-3 h-3 text-gray-400"
                  fill="currentColor"
                  viewBox="0 0 20 20"
                >
                  <path
                    clip-rule="evenodd"
                    d="M14.707 12.707a1 1 0 01-1.414 0L10 9.414l-3.293 3.293a1 1 0 01-1.414-1.414l4-4a1 1 0 011.414 0l4 4a1 1 0 010 1.414z"
                    fill-rule="evenodd"
                  />
                </svg>
                <svg
                  aria-hidden="true"
                  class="w-3 h-3 -mt-1 text-gray-400"
                  fill="currentColor"
                  viewBox="0 0 20 20"
                >
                  <path
                    clip-rule="evenodd"
                    d="M5.293 7.293a1 1 0 011.414 0L10 10.586l3.293-3.293a1 1 0 111.414 1.414l-4 4a1 1 0 01-1.414 0l-4-4a1 1 0 010-1.414z"
                    fill-rule="evenodd"
                  />
                </svg>
              </div>
            </div>
          </th>
          <th
            class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider  "
          >
            <div
              class="flex items-center space-x-1"
            >
              <span>
                Email Address
              </span>
            </div>
          </th>
        </tr>
      </thead>
      <tbody
        class="bg-white divide-y divide-gray-200"
      >
        <tr
          class="hover:bg-gray-50 transition-colors duration-150"
        >
          <td
            class="px-6 py-4 whitespace-nowrap text-sm text-gray-900 text-center"
          >
            1
          </td>
          <td
            class="px-6 py-4 whitespace-nowrap text-sm text-gray-900 "
          >
            JOHN DOE
          </td>
          <td
            class="px-6 py-4 whitespace-nowrap text-sm text-gray-900 "
          >
            <a
              class="text-blue-600 hover:underline"
              href="mailto:john@example.com"
            >
              john@example.com
            </a>
          </td>
        </tr>
        <tr
          class="hover:bg-gray-50 transition-colors duration-150"
        >
          <td
            class="px-6 py-4 whitespace-nowrap text-sm text-gray-900 text-center"
          >
            2
          </td>
          <td
            class="px-6 py-4 whitespace-nowrap text-sm text-gray-900 "
          >
            JANE SMITH
          </td>
          <td
            class="px-6 py-4 whitespace-nowrap text-sm text-gray-900 "
          >
            <a
              class="text-blue-600 hover:underline"
              href="mailto:jane@example.com"
            >
              jane@example.com
            </a>
          </td>
        </tr>
        <tr
          class="hover:bg-gray-50 transition-colors duration-150"
        >
          <td
            class="px-6 py-4 whitespace-nowrap text-sm text-gray-900 text-center"
          >
            3
          </td>
          <td
            class="px-6 py-4 whitespace-nowrap text-sm text-gray-900 "
          >
            BOB JOHNSON
          </td>
          <td
            class="px-6 py-4 whitespace-nowrap text-sm text-gray-900 "
          >
            <a
              class="text-blue-600 hover:underline"
              href="mailto:bob@example.com"
            >
              bob@example.com
            </a>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
  <div
    class="md:hidden space-y-4"
  >
    <div
      class="bg-white rounded-lg border border-gray-200 shadow-sm p-4 space-y-3"
    >
      <div
        class="flex justify-between items-start"
      >
        <span
          class="text-sm font-medium text-gray-500 min-w-0 flex-1"
        >
          ID
          :
        </span>
        <span
          class="text-sm text-gray-900 text-right min-w-0 flex-1 ml-2"
        >
          1
        </span>
      </div>
      <div
        class="flex justify-between items-start"
      >
        <span
          class="text-sm font-medium text-gray-500 min-w-0 flex-1"
        >
          Full Name
          :
        </span>
        <span
          class="text-sm text-gray-900 text-right min-w-0 flex-1 ml-2"
        >
          JOHN DOE
        </span>
      </div>
      <div
        class="flex justify-between items-start"
      >
        <span
          class="text-sm font-medium text-gray-500 min-w-0 flex-1"
        >
          Email Address
          :
        </span>
        <span
          class="text-sm text-gray-900 text-right min-w-0 flex-1 ml-2"
        >
          <a
            class="text-blue-600 hover:underline"
            href="mailto:john@example.com"
          >
            john@example.com
          </a>
        </span>
      </div>
    </div>
    <div
      class="bg-white rounded-lg border border-gray-200 shadow-sm p-4 space-y-3"
    >
      <div
        class="flex justify-between items-start"
      >
        <span
          class="text-sm font-medium text-gray-500 min-w-0 flex-1"
        >
          ID
          :
        </span>
        <span
          class="text-sm text-gray-900 text-right min-w-0 flex-1 ml-2"
        >
          2
        </span>
      </div>
      <div
        class="flex justify-between items-start"
      >
        <span
          class="text-sm font-medium text-gray-500 min-w-0 flex-1"
        >
          Full Name
          :
        </span>
        <span
          class="text-sm text-gray-900 text-right min-w-0 flex-1 ml-2"
        >
          JANE SMITH
        </span>
      </div>
      <div
        class="flex justify-between items-start"
      >
        <span
          class="text-sm font-medium text-gray-500 min-w-0 flex-1"
        >
          Email Address
          :
        </span>
        <span
          class="text-sm text-gray-900 text-right min-w-0 flex-1 ml-2"
        >
          <a
            class="text-blue-600 hover:underline"
            href="mailto:jane@example.com"
          >
            jane@example.com
          </a>
        </span>
      </div>
    </div>
    <div
      class="bg-white rounded-lg border border-gray-200 shadow-sm p-4 space-y-3"
    >
      <div
        class="flex justify-between items-start"
      >
        <span
          class="text-sm font-medium text-gray-500 min-w-0 flex-1"
        >
          ID
          :
        </span>
        <span
          class="text-sm text-gray-900 text-right min-w-0 flex-1 ml-2"
        >
          3
        </span>
      </div>
      <div
        class="flex justify-between items-start"
      >
        <span
          class="text-sm font-medium text-gray-500 min-w-0 flex-1"
        >
          Full Name
          :
        </span>
        <span
          class="text-sm text-gray-900 text-right min-w-0 flex-1 ml-2"
        >
          BOB JOHNSON
        </span>
      </div>
      <div
        class="flex justify-between items-start"
      >
        <span
          class="text-sm font-medium text-gray-500 min-w-0 flex-1"
        >
          Email Address
          :
        </span>
        <span
          class="text-sm text-gray-900 text-right min-w-0 flex-1 ml-2"
        >
          <a
            class="text-blue-600 hover:underline"
            href="mailto:bob@example.com"
          >
            bob@example.com
          </a>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`PaginatedTable Snapshot Tests renders table with custom empty message 1`] = `
<div
  class="w-full "
>
  <div
    class="md:hidden mb-4 flex items-center justify-between bg-white p-4 rounded-lg border border-gray-200 shadow-sm"
  >
    <span
      class="text-sm font-medium text-gray-700"
    >
      Sort by:
    </span>
    <select
      class="text-sm border border-gray-300 rounded-md px-3 py-1 focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-transparent"
    >
      <option
        value=""
      >
        No sorting
      </option>
      <option
        value="id"
      >
        ID
      </option>
      <option
        value="name"
      >
        Name
      </option>
    </select>
  </div>
  <div
    class="hidden md:block overflow-x-auto shadow-sm border border-gray-200 rounded-lg"
  >
    <table
      class="min-w-full divide-y divide-gray-200"
    >
      <thead
        class="bg-gray-50"
      >
        <tr>
          <th
            class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider cursor-pointer hover:bg-gray-100 "
          >
            <div
              class="flex items-center space-x-1"
            >
              <span>
                ID
              </span>
              <div
                class="flex flex-col"
              >
                <svg
                  aria-hidden="true"
                  class="w-3 h-3 text-gray-400"
                  fill="currentColor"
                  viewBox="0 0 20 20"
                >
                  <path
                    clip-rule="evenodd"
                    d="M14.707 12.707a1 1 0 01-1.414 0L10 9.414l-3.293 3.293a1 1 0 01-1.414-1.414l4-4a1 1 0 011.414 0l4 4a1 1 0 010 1.414z"
                    fill-rule="evenodd"
                  />
                </svg>
                <svg
                  aria-hidden="true"
                  class="w-3 h-3 -mt-1 text-gray-400"
                  fill="currentColor"
                  viewBox="0 0 20 20"
                >
                  <path
                    clip-rule="evenodd"
                    d="M5.293 7.293a1 1 0 011.414 0L10 10.586l3.293-3.293a1 1 0 111.414 1.414l-4 4a1 1 0 01-1.414 0l-4-4a1 1 0 010-1.414z"
                    fill-rule="evenodd"
                  />
                </svg>
              </div>
            </div>
          </th>
          <th
            class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider cursor-pointer hover:bg-gray-100 "
          >
            <div
              class="flex items-center space-x-1"
            >
              <span>
                Name
              </span>
              <div
                class="flex flex-col"
              >
                <svg
                  aria-hidden="true"
                  class="w-3 h-3 text-gray-400"
                  fill="currentColor"
                  viewBox="0 0 20 20"
                >
                  <path
                    clip-rule="evenodd"
                    d="M14.707 12.707a1 1 0 01-1.414 0L10 9.414l-3.293 3.293a1 1 0 01-1.414-1.414l4-4a1 1 0 011.414 0l4 4a1 1 0 010 1.414z"
                    fill-rule="evenodd"
                  />
                </svg>
                <svg
                  aria-hidden="true"
                  class="w-3 h-3 -mt-1 text-gray-400"
                  fill="currentColor"
                  viewBox="0 0 20 20"
                >
                  <path
                    clip-rule="evenodd"
                    d="M5.293 7.293a1 1 0 011.414 0L10 10.586l3.293-3.293a1 1 0 111.414 1.414l-4 4a1 1 0 01-1.414 0l-4-4a1 1 0 010-1.414z"
                    fill-rule="evenodd"
                  />
                </svg>
              </div>
            </div>
          </th>
          <th
            class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider  "
          >
            <div
              class="flex items-center space-x-1"
            >
              <span>
                Email
              </span>
            </div>
          </th>
        </tr>
      </thead>
      <tbody
        class="bg-white divide-y divide-gray-200"
      >
        <tr>
          <td
            class="px-6 py-8 text-center text-gray-500"
            colspan="3"
          >
            No users found
          </td>
        </tr>
      </tbody>
    </table>
  </div>
  <div
    class="md:hidden space-y-4"
  >
    <div
      class="text-center py-8 text-gray-500 bg-white rounded-lg border border-gray-200"
    >
      No users found
    </div>
  </div>
</div>
`;

exports[`PaginatedTable Snapshot Tests renders table with mixed column configurations 1`] = `
<div
  class="w-full "
>
  <div
    class="md:hidden mb-4 flex items-center justify-between bg-white p-4 rounded-lg border border-gray-200 shadow-sm"
  >
    <span
      class="text-sm font-medium text-gray-700"
    >
      Sort by:
    </span>
    <select
      class="text-sm border border-gray-300 rounded-md px-3 py-1 focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-transparent"
    >
      <option
        value=""
      >
        No sorting
      </option>
      <option
        value="id"
      >
        User ID
      </option>
      <option
        value="name"
      >
        Display Name
      </option>
    </select>
  </div>
  <div
    class="hidden md:block overflow-x-auto shadow-sm border border-gray-200 rounded-lg"
  >
    <table
      class="min-w-full divide-y divide-gray-200"
    >
      <thead
        class="bg-gray-50"
      >
        <tr>
          <th
            class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider cursor-pointer hover:bg-gray-100 text-center font-mono"
          >
            <div
              class="flex items-center space-x-1"
            >
              <span>
                User ID
              </span>
              <div
                class="flex flex-col"
              >
                <svg
                  aria-hidden="true"
                  class="w-3 h-3 text-gray-400"
                  fill="currentColor"
                  viewBox="0 0 20 20"
                >
                  <path
                    clip-rule="evenodd"
                    d="M14.707 12.707a1 1 0 01-1.414 0L10 9.414l-3.293 3.293a1 1 0 01-1.414-1.414l4-4a1 1 0 011.414 0l4 4a1 1 0 010 1.414z"
                    fill-rule="evenodd"
                  />
                </svg>
                <svg
                  aria-hidden="true"
                  class="w-3 h-3 -mt-1 text-gray-400"
                  fill="currentColor"
                  viewBox="0 0 20 20"
                >
                  <path
                    clip-rule="evenodd"
                    d="M5.293 7.293a1 1 0 011.414 0L10 10.586l3.293-3.293a1 1 0 111.414 1.414l-4 4a1 1 0 01-1.414 0l-4-4a1 1 0 010-1.414z"
                    fill-rule="evenodd"
                  />
                </svg>
              </div>
            </div>
          </th>
          <th
            class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider cursor-pointer hover:bg-gray-100 font-semibold"
          >
            <div
              class="flex items-center space-x-1"
            >
              <span>
                Display Name
              </span>
              <div
                class="flex flex-col"
              >
                <svg
                  aria-hidden="true"
                  class="w-3 h-3 text-gray-400"
                  fill="currentColor"
                  viewBox="0 0 20 20"
                >
                  <path
                    clip-rule="evenodd"
                    d="M14.707 12.707a1 1 0 01-1.414 0L10 9.414l-3.293 3.293a1 1 0 01-1.414-1.414l4-4a1 1 0 011.414 0l4 4a1 1 0 010 1.414z"
                    fill-rule="evenodd"
                  />
                </svg>
                <svg
                  aria-hidden="true"
                  class="w-3 h-3 -mt-1 text-gray-400"
                  fill="currentColor"
                  viewBox="0 0 20 20"
                >
                  <path
                    clip-rule="evenodd"
                    d="M5.293 7.293a1 1 0 011.414 0L10 10.586l3.293-3.293a1 1 0 111.414 1.414l-4 4a1 1 0 01-1.414 0l-4-4a1 1 0 010-1.414z"
                    fill-rule="evenodd"
                  />
                </svg>
              </div>
            </div>
          </th>
          <th
            class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider  text-gray-600 text-sm"
          >
            <div
              class="flex items-center space-x-1"
            >
              <span>
                Contact Email
              </span>
            </div>
          </th>
        </tr>
      </thead>
      <tbody
        class="bg-white divide-y divide-gray-200"
      >
        <tr
          class="hover:bg-gray-50 transition-colors duration-150"
        >
          <td
            class="px-6 py-4 whitespace-nowrap text-sm text-gray-900 text-center font-mono"
          >
            #001
          </td>
          <td
            class="px-6 py-4 whitespace-nowrap text-sm text-gray-900 font-semibold"
          >
            John Doe
          </td>
          <td
            class="px-6 py-4 whitespace-nowrap text-sm text-gray-900 text-gray-600 text-sm"
          >
            john@example.com
          </td>
        </tr>
        <tr
          class="hover:bg-gray-50 transition-colors duration-150"
        >
          <td
            class="px-6 py-4 whitespace-nowrap text-sm text-gray-900 text-center font-mono"
          >
            #002
          </td>
          <td
            class="px-6 py-4 whitespace-nowrap text-sm text-gray-900 font-semibold"
          >
            Jane Smith
          </td>
          <td
            class="px-6 py-4 whitespace-nowrap text-sm text-gray-900 text-gray-600 text-sm"
          >
            jane@example.com
          </td>
        </tr>
        <tr
          class="hover:bg-gray-50 transition-colors duration-150"
        >
          <td
            class="px-6 py-4 whitespace-nowrap text-sm text-gray-900 text-center font-mono"
          >
            #003
          </td>
          <td
            class="px-6 py-4 whitespace-nowrap text-sm text-gray-900 font-semibold"
          >
            Bob Johnson
          </td>
          <td
            class="px-6 py-4 whitespace-nowrap text-sm text-gray-900 text-gray-600 text-sm"
          >
            bob@example.com
          </td>
        </tr>
      </tbody>
    </table>
  </div>
  <div
    class="md:hidden space-y-4"
  >
    <div
      class="bg-white rounded-lg border border-gray-200 shadow-sm p-4 space-y-3"
    >
      <div
        class="flex justify-between items-start"
      >
        <span
          class="text-sm font-medium text-gray-500 min-w-0 flex-1"
        >
          User ID
          :
        </span>
        <span
          class="text-sm text-gray-900 text-right min-w-0 flex-1 ml-2"
        >
          #001
        </span>
      </div>
      <div
        class="flex justify-between items-start"
      >
        <span
          class="text-sm font-medium text-gray-500 min-w-0 flex-1"
        >
          Display Name
          :
        </span>
        <span
          class="text-sm text-gray-900 text-right min-w-0 flex-1 ml-2"
        >
          John Doe
        </span>
      </div>
      <div
        class="flex justify-between items-start"
      >
        <span
          class="text-sm font-medium text-gray-500 min-w-0 flex-1"
        >
          Contact Email
          :
        </span>
        <span
          class="text-sm text-gray-900 text-right min-w-0 flex-1 ml-2"
        >
          john@example.com
        </span>
      </div>
    </div>
    <div
      class="bg-white rounded-lg border border-gray-200 shadow-sm p-4 space-y-3"
    >
      <div
        class="flex justify-between items-start"
      >
        <span
          class="text-sm font-medium text-gray-500 min-w-0 flex-1"
        >
          User ID
          :
        </span>
        <span
          class="text-sm text-gray-900 text-right min-w-0 flex-1 ml-2"
        >
          #002
        </span>
      </div>
      <div
        class="flex justify-between items-start"
      >
        <span
          class="text-sm font-medium text-gray-500 min-w-0 flex-1"
        >
          Display Name
          :
        </span>
        <span
          class="text-sm text-gray-900 text-right min-w-0 flex-1 ml-2"
        >
          Jane Smith
        </span>
      </div>
      <div
        class="flex justify-between items-start"
      >
        <span
          class="text-sm font-medium text-gray-500 min-w-0 flex-1"
        >
          Contact Email
          :
        </span>
        <span
          class="text-sm text-gray-900 text-right min-w-0 flex-1 ml-2"
        >
          jane@example.com
        </span>
      </div>
    </div>
    <div
      class="bg-white rounded-lg border border-gray-200 shadow-sm p-4 space-y-3"
    >
      <div
        class="flex justify-between items-start"
      >
        <span
          class="text-sm font-medium text-gray-500 min-w-0 flex-1"
        >
          User ID
          :
        </span>
        <span
          class="text-sm text-gray-900 text-right min-w-0 flex-1 ml-2"
        >
          #003
        </span>
      </div>
      <div
        class="flex justify-between items-start"
      >
        <span
          class="text-sm font-medium text-gray-500 min-w-0 flex-1"
        >
          Display Name
          :
        </span>
        <span
          class="text-sm text-gray-900 text-right min-w-0 flex-1 ml-2"
        >
          Bob Johnson
        </span>
      </div>
      <div
        class="flex justify-between items-start"
      >
        <span
          class="text-sm font-medium text-gray-500 min-w-0 flex-1"
        >
          Contact Email
          :
        </span>
        <span
          class="text-sm text-gray-900 text-right min-w-0 flex-1 ml-2"
        >
          bob@example.com
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`PaginatedTable Snapshot Tests renders table with non-sortable columns only 1`] = `
<div
  class="w-full "
>
  <div
    class="md:hidden mb-4 flex items-center justify-between bg-white p-4 rounded-lg border border-gray-200 shadow-sm"
  >
    <span
      class="text-sm font-medium text-gray-700"
    >
      Sort by:
    </span>
    <select
      class="text-sm border border-gray-300 rounded-md px-3 py-1 focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-transparent"
    >
      <option
        value=""
      >
        No sorting
      </option>
    </select>
  </div>
  <div
    class="hidden md:block overflow-x-auto shadow-sm border border-gray-200 rounded-lg"
  >
    <table
      class="min-w-full divide-y divide-gray-200"
    >
      <thead
        class="bg-gray-50"
      >
        <tr>
          <th
            class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider  "
          >
            <div
              class="flex items-center space-x-1"
            >
              <span>
                ID
              </span>
            </div>
          </th>
          <th
            class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider  "
          >
            <div
              class="flex items-center space-x-1"
            >
              <span>
                Name
              </span>
            </div>
          </th>
          <th
            class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider  "
          >
            <div
              class="flex items-center space-x-1"
            >
              <span>
                Email
              </span>
            </div>
          </th>
        </tr>
      </thead>
      <tbody
        class="bg-white divide-y divide-gray-200"
      >
        <tr
          class="hover:bg-gray-50 transition-colors duration-150"
        >
          <td
            class="px-6 py-4 whitespace-nowrap text-sm text-gray-900 "
          >
            1
          </td>
          <td
            class="px-6 py-4 whitespace-nowrap text-sm text-gray-900 "
          >
            John Doe
          </td>
          <td
            class="px-6 py-4 whitespace-nowrap text-sm text-gray-900 "
          >
            john@example.com
          </td>
        </tr>
        <tr
          class="hover:bg-gray-50 transition-colors duration-150"
        >
          <td
            class="px-6 py-4 whitespace-nowrap text-sm text-gray-900 "
          >
            2
          </td>
          <td
            class="px-6 py-4 whitespace-nowrap text-sm text-gray-900 "
          >
            Jane Smith
          </td>
          <td
            class="px-6 py-4 whitespace-nowrap text-sm text-gray-900 "
          >
            jane@example.com
          </td>
        </tr>
        <tr
          class="hover:bg-gray-50 transition-colors duration-150"
        >
          <td
            class="px-6 py-4 whitespace-nowrap text-sm text-gray-900 "
          >
            3
          </td>
          <td
            class="px-6 py-4 whitespace-nowrap text-sm text-gray-900 "
          >
            Bob Johnson
          </td>
          <td
            class="px-6 py-4 whitespace-nowrap text-sm text-gray-900 "
          >
            bob@example.com
          </td>
        </tr>
      </tbody>
    </table>
  </div>
  <div
    class="md:hidden space-y-4"
  >
    <div
      class="bg-white rounded-lg border border-gray-200 shadow-sm p-4 space-y-3"
    >
      <div
        class="flex justify-between items-start"
      >
        <span
          class="text-sm font-medium text-gray-500 min-w-0 flex-1"
        >
          ID
          :
        </span>
        <span
          class="text-sm text-gray-900 text-right min-w-0 flex-1 ml-2"
        >
          1
        </span>
      </div>
      <div
        class="flex justify-between items-start"
      >
        <span
          class="text-sm font-medium text-gray-500 min-w-0 flex-1"
        >
          Name
          :
        </span>
        <span
          class="text-sm text-gray-900 text-right min-w-0 flex-1 ml-2"
        >
          John Doe
        </span>
      </div>
      <div
        class="flex justify-between items-start"
      >
        <span
          class="text-sm font-medium text-gray-500 min-w-0 flex-1"
        >
          Email
          :
        </span>
        <span
          class="text-sm text-gray-900 text-right min-w-0 flex-1 ml-2"
        >
          john@example.com
        </span>
      </div>
    </div>
    <div
      class="bg-white rounded-lg border border-gray-200 shadow-sm p-4 space-y-3"
    >
      <div
        class="flex justify-between items-start"
      >
        <span
          class="text-sm font-medium text-gray-500 min-w-0 flex-1"
        >
          ID
          :
        </span>
        <span
          class="text-sm text-gray-900 text-right min-w-0 flex-1 ml-2"
        >
          2
        </span>
      </div>
      <div
        class="flex justify-between items-start"
      >
        <span
          class="text-sm font-medium text-gray-500 min-w-0 flex-1"
        >
          Name
          :
        </span>
        <span
          class="text-sm text-gray-900 text-right min-w-0 flex-1 ml-2"
        >
          Jane Smith
        </span>
      </div>
      <div
        class="flex justify-between items-start"
      >
        <span
          class="text-sm font-medium text-gray-500 min-w-0 flex-1"
        >
          Email
          :
        </span>
        <span
          class="text-sm text-gray-900 text-right min-w-0 flex-1 ml-2"
        >
          jane@example.com
        </span>
      </div>
    </div>
    <div
      class="bg-white rounded-lg border border-gray-200 shadow-sm p-4 space-y-3"
    >
      <div
        class="flex justify-between items-start"
      >
        <span
          class="text-sm font-medium text-gray-500 min-w-0 flex-1"
        >
          ID
          :
        </span>
        <span
          class="text-sm text-gray-900 text-right min-w-0 flex-1 ml-2"
        >
          3
        </span>
      </div>
      <div
        class="flex justify-between items-start"
      >
        <span
          class="text-sm font-medium text-gray-500 min-w-0 flex-1"
        >
          Name
          :
        </span>
        <span
          class="text-sm text-gray-900 text-right min-w-0 flex-1 ml-2"
        >
          Bob Johnson
        </span>
      </div>
      <div
        class="flex justify-between items-start"
      >
        <span
          class="text-sm font-medium text-gray-500 min-w-0 flex-1"
        >
          Email
          :
        </span>
        <span
          class="text-sm text-gray-900 text-right min-w-0 flex-1 ml-2"
        >
          bob@example.com
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`PaginatedTable Snapshot Tests renders table with pagination (multiple pages) 1`] = `
<div
  class="w-full "
>
  <div
    class="md:hidden mb-4 flex items-center justify-between bg-white p-4 rounded-lg border border-gray-200 shadow-sm"
  >
    <span
      class="text-sm font-medium text-gray-700"
    >
      Sort by:
    </span>
    <select
      class="text-sm border border-gray-300 rounded-md px-3 py-1 focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-transparent"
    >
      <option
        value=""
      >
        No sorting
      </option>
      <option
        value="id"
      >
        ID
      </option>
      <option
        value="name"
      >
        Name
      </option>
    </select>
  </div>
  <div
    class="hidden md:block overflow-x-auto shadow-sm border border-gray-200 rounded-lg"
  >
    <table
      class="min-w-full divide-y divide-gray-200"
    >
      <thead
        class="bg-gray-50"
      >
        <tr>
          <th
            class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider cursor-pointer hover:bg-gray-100 "
          >
            <div
              class="flex items-center space-x-1"
            >
              <span>
                ID
              </span>
              <div
                class="flex flex-col"
              >
                <svg
                  aria-hidden="true"
                  class="w-3 h-3 text-gray-400"
                  fill="currentColor"
                  viewBox="0 0 20 20"
                >
                  <path
                    clip-rule="evenodd"
                    d="M14.707 12.707a1 1 0 01-1.414 0L10 9.414l-3.293 3.293a1 1 0 01-1.414-1.414l4-4a1 1 0 011.414 0l4 4a1 1 0 010 1.414z"
                    fill-rule="evenodd"
                  />
                </svg>
                <svg
                  aria-hidden="true"
                  class="w-3 h-3 -mt-1 text-gray-400"
                  fill="currentColor"
                  viewBox="0 0 20 20"
                >
                  <path
                    clip-rule="evenodd"
                    d="M5.293 7.293a1 1 0 011.414 0L10 10.586l3.293-3.293a1 1 0 111.414 1.414l-4 4a1 1 0 01-1.414 0l-4-4a1 1 0 010-1.414z"
                    fill-rule="evenodd"
                  />
                </svg>
              </div>
            </div>
          </th>
          <th
            class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider cursor-pointer hover:bg-gray-100 "
          >
            <div
              class="flex items-center space-x-1"
            >
              <span>
                Name
              </span>
              <div
                class="flex flex-col"
              >
                <svg
                  aria-hidden="true"
                  class="w-3 h-3 text-gray-400"
                  fill="currentColor"
                  viewBox="0 0 20 20"
                >
                  <path
                    clip-rule="evenodd"
                    d="M14.707 12.707a1 1 0 01-1.414 0L10 9.414l-3.293 3.293a1 1 0 01-1.414-1.414l4-4a1 1 0 011.414 0l4 4a1 1 0 010 1.414z"
                    fill-rule="evenodd"
                  />
                </svg>
                <svg
                  aria-hidden="true"
                  class="w-3 h-3 -mt-1 text-gray-400"
                  fill="currentColor"
                  viewBox="0 0 20 20"
                >
                  <path
                    clip-rule="evenodd"
                    d="M5.293 7.293a1 1 0 011.414 0L10 10.586l3.293-3.293a1 1 0 111.414 1.414l-4 4a1 1 0 01-1.414 0l-4-4a1 1 0 010-1.414z"
                    fill-rule="evenodd"
                  />
                </svg>
              </div>
            </div>
          </th>
          <th
            class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider  "
          >
            <div
              class="flex items-center space-x-1"
            >
              <span>
                Email
              </span>
            </div>
          </th>
        </tr>
      </thead>
      <tbody
        class="bg-white divide-y divide-gray-200"
      >
        <tr
          class="hover:bg-gray-50 transition-colors duration-150"
        >
          <td
            class="px-6 py-4 whitespace-nowrap text-sm text-gray-900 "
          >
            1
          </td>
          <td
            class="px-6 py-4 whitespace-nowrap text-sm text-gray-900 "
          >
            User 1
          </td>
          <td
            class="px-6 py-4 whitespace-nowrap text-sm text-gray-900 "
          >
            user1@example.com
          </td>
        </tr>
        <tr
          class="hover:bg-gray-50 transition-colors duration-150"
        >
          <td
            class="px-6 py-4 whitespace-nowrap text-sm text-gray-900 "
          >
            2
          </td>
          <td
            class="px-6 py-4 whitespace-nowrap text-sm text-gray-900 "
          >
            User 2
          </td>
          <td
            class="px-6 py-4 whitespace-nowrap text-sm text-gray-900 "
          >
            user2@example.com
          </td>
        </tr>
        <tr
          class="hover:bg-gray-50 transition-colors duration-150"
        >
          <td
            class="px-6 py-4 whitespace-nowrap text-sm text-gray-900 "
          >
            3
          </td>
          <td
            class="px-6 py-4 whitespace-nowrap text-sm text-gray-900 "
          >
            User 3
          </td>
          <td
            class="px-6 py-4 whitespace-nowrap text-sm text-gray-900 "
          >
            user3@example.com
          </td>
        </tr>
        <tr
          class="hover:bg-gray-50 transition-colors duration-150"
        >
          <td
            class="px-6 py-4 whitespace-nowrap text-sm text-gray-900 "
          >
            4
          </td>
          <td
            class="px-6 py-4 whitespace-nowrap text-sm text-gray-900 "
          >
            User 4
          </td>
          <td
            class="px-6 py-4 whitespace-nowrap text-sm text-gray-900 "
          >
            user4@example.com
          </td>
        </tr>
        <tr
          class="hover:bg-gray-50 transition-colors duration-150"
        >
          <td
            class="px-6 py-4 whitespace-nowrap text-sm text-gray-900 "
          >
            5
          </td>
          <td
            class="px-6 py-4 whitespace-nowrap text-sm text-gray-900 "
          >
            User 5
          </td>
          <td
            class="px-6 py-4 whitespace-nowrap text-sm text-gray-900 "
          >
            user5@example.com
          </td>
        </tr>
        <tr
          class="hover:bg-gray-50 transition-colors duration-150"
        >
          <td
            class="px-6 py-4 whitespace-nowrap text-sm text-gray-900 "
          >
            6
          </td>
          <td
            class="px-6 py-4 whitespace-nowrap text-sm text-gray-900 "
          >
            User 6
          </td>
          <td
            class="px-6 py-4 whitespace-nowrap text-sm text-gray-900 "
          >
            user6@example.com
          </td>
        </tr>
        <tr
          class="hover:bg-gray-50 transition-colors duration-150"
        >
          <td
            class="px-6 py-4 whitespace-nowrap text-sm text-gray-900 "
          >
            7
          </td>
          <td
            class="px-6 py-4 whitespace-nowrap text-sm text-gray-900 "
          >
            User 7
          </td>
          <td
            class="px-6 py-4 whitespace-nowrap text-sm text-gray-900 "
          >
            user7@example.com
          </td>
        </tr>
        <tr
          class="hover:bg-gray-50 transition-colors duration-150"
        >
          <td
            class="px-6 py-4 whitespace-nowrap text-sm text-gray-900 "
          >
            8
          </td>
          <td
            class="px-6 py-4 whitespace-nowrap text-sm text-gray-900 "
          >
            User 8
          </td>
          <td
            class="px-6 py-4 whitespace-nowrap text-sm text-gray-900 "
          >
            user8@example.com
          </td>
        </tr>
        <tr
          class="hover:bg-gray-50 transition-colors duration-150"
        >
          <td
            class="px-6 py-4 whitespace-nowrap text-sm text-gray-900 "
          >
            9
          </td>
          <td
            class="px-6 py-4 whitespace-nowrap text-sm text-gray-900 "
          >
            User 9
          </td>
          <td
            class="px-6 py-4 whitespace-nowrap text-sm text-gray-900 "
          >
            user9@example.com
          </td>
        </tr>
        <tr
          class="hover:bg-gray-50 transition-colors duration-150"
        >
          <td
            class="px-6 py-4 whitespace-nowrap text-sm text-gray-900 "
          >
            10
          </td>
          <td
            class="px-6 py-4 whitespace-nowrap text-sm text-gray-900 "
          >
            User 10
          </td>
          <td
            class="px-6 py-4 whitespace-nowrap text-sm text-gray-900 "
          >
            user10@example.com
          </td>
        </tr>
      </tbody>
    </table>
  </div>
  <div
    class="md:hidden space-y-4"
  >
    <div
      class="bg-white rounded-lg border border-gray-200 shadow-sm p-4 space-y-3"
    >
      <div
        class="flex justify-between items-start"
      >
        <span
          class="text-sm font-medium text-gray-500 min-w-0 flex-1"
        >
          ID
          :
        </span>
        <span
          class="text-sm text-gray-900 text-right min-w-0 flex-1 ml-2"
        >
          1
        </span>
      </div>
      <div
        class="flex justify-between items-start"
      >
        <span
          class="text-sm font-medium text-gray-500 min-w-0 flex-1"
        >
          Name
          :
        </span>
        <span
          class="text-sm text-gray-900 text-right min-w-0 flex-1 ml-2"
        >
          User 1
        </span>
      </div>
      <div
        class="flex justify-between items-start"
      >
        <span
          class="text-sm font-medium text-gray-500 min-w-0 flex-1"
        >
          Email
          :
        </span>
        <span
          class="text-sm text-gray-900 text-right min-w-0 flex-1 ml-2"
        >
          user1@example.com
        </span>
      </div>
    </div>
    <div
      class="bg-white rounded-lg border border-gray-200 shadow-sm p-4 space-y-3"
    >
      <div
        class="flex justify-between items-start"
      >
        <span
          class="text-sm font-medium text-gray-500 min-w-0 flex-1"
        >
          ID
          :
        </span>
        <span
          class="text-sm text-gray-900 text-right min-w-0 flex-1 ml-2"
        >
          2
        </span>
      </div>
      <div
        class="flex justify-between items-start"
      >
        <span
          class="text-sm font-medium text-gray-500 min-w-0 flex-1"
        >
          Name
          :
        </span>
        <span
          class="text-sm text-gray-900 text-right min-w-0 flex-1 ml-2"
        >
          User 2
        </span>
      </div>
      <div
        class="flex justify-between items-start"
      >
        <span
          class="text-sm font-medium text-gray-500 min-w-0 flex-1"
        >
          Email
          :
        </span>
        <span
          class="text-sm text-gray-900 text-right min-w-0 flex-1 ml-2"
        >
          user2@example.com
        </span>
      </div>
    </div>
    <div
      class="bg-white rounded-lg border border-gray-200 shadow-sm p-4 space-y-3"
    >
      <div
        class="flex justify-between items-start"
      >
        <span
          class="text-sm font-medium text-gray-500 min-w-0 flex-1"
        >
          ID
          :
        </span>
        <span
          class="text-sm text-gray-900 text-right min-w-0 flex-1 ml-2"
        >
          3
        </span>
      </div>
      <div
        class="flex justify-between items-start"
      >
        <span
          class="text-sm font-medium text-gray-500 min-w-0 flex-1"
        >
          Name
          :
        </span>
        <span
          class="text-sm text-gray-900 text-right min-w-0 flex-1 ml-2"
        >
          User 3
        </span>
      </div>
      <div
        class="flex justify-between items-start"
      >
        <span
          class="text-sm font-medium text-gray-500 min-w-0 flex-1"
        >
          Email
          :
        </span>
        <span
          class="text-sm text-gray-900 text-right min-w-0 flex-1 ml-2"
        >
          user3@example.com
        </span>
      </div>
    </div>
    <div
      class="bg-white rounded-lg border border-gray-200 shadow-sm p-4 space-y-3"
    >
      <div
        class="flex justify-between items-start"
      >
        <span
          class="text-sm font-medium text-gray-500 min-w-0 flex-1"
        >
          ID
          :
        </span>
        <span
          class="text-sm text-gray-900 text-right min-w-0 flex-1 ml-2"
        >
          4
        </span>
      </div>
      <div
        class="flex justify-between items-start"
      >
        <span
          class="text-sm font-medium text-gray-500 min-w-0 flex-1"
        >
          Name
          :
        </span>
        <span
          class="text-sm text-gray-900 text-right min-w-0 flex-1 ml-2"
        >
          User 4
        </span>
      </div>
      <div
        class="flex justify-between items-start"
      >
        <span
          class="text-sm font-medium text-gray-500 min-w-0 flex-1"
        >
          Email
          :
        </span>
        <span
          class="text-sm text-gray-900 text-right min-w-0 flex-1 ml-2"
        >
          user4@example.com
        </span>
      </div>
    </div>
    <div
      class="bg-white rounded-lg border border-gray-200 shadow-sm p-4 space-y-3"
    >
      <div
        class="flex justify-between items-start"
      >
        <span
          class="text-sm font-medium text-gray-500 min-w-0 flex-1"
        >
          ID
          :
        </span>
        <span
          class="text-sm text-gray-900 text-right min-w-0 flex-1 ml-2"
        >
          5
        </span>
      </div>
      <div
        class="flex justify-between items-start"
      >
        <span
          class="text-sm font-medium text-gray-500 min-w-0 flex-1"
        >
          Name
          :
        </span>
        <span
          class="text-sm text-gray-900 text-right min-w-0 flex-1 ml-2"
        >
          User 5
        </span>
      </div>
      <div
        class="flex justify-between items-start"
      >
        <span
          class="text-sm font-medium text-gray-500 min-w-0 flex-1"
        >
          Email
          :
        </span>
        <span
          class="text-sm text-gray-900 text-right min-w-0 flex-1 ml-2"
        >
          user5@example.com
        </span>
      </div>
    </div>
    <div
      class="bg-white rounded-lg border border-gray-200 shadow-sm p-4 space-y-3"
    >
      <div
        class="flex justify-between items-start"
      >
        <span
          class="text-sm font-medium text-gray-500 min-w-0 flex-1"
        >
          ID
          :
        </span>
        <span
          class="text-sm text-gray-900 text-right min-w-0 flex-1 ml-2"
        >
          6
        </span>
      </div>
      <div
        class="flex justify-between items-start"
      >
        <span
          class="text-sm font-medium text-gray-500 min-w-0 flex-1"
        >
          Name
          :
        </span>
        <span
          class="text-sm text-gray-900 text-right min-w-0 flex-1 ml-2"
        >
          User 6
        </span>
      </div>
      <div
        class="flex justify-between items-start"
      >
        <span
          class="text-sm font-medium text-gray-500 min-w-0 flex-1"
        >
          Email
          :
        </span>
        <span
          class="text-sm text-gray-900 text-right min-w-0 flex-1 ml-2"
        >
          user6@example.com
        </span>
      </div>
    </div>
    <div
      class="bg-white rounded-lg border border-gray-200 shadow-sm p-4 space-y-3"
    >
      <div
        class="flex justify-between items-start"
      >
        <span
          class="text-sm font-medium text-gray-500 min-w-0 flex-1"
        >
          ID
          :
        </span>
        <span
          class="text-sm text-gray-900 text-right min-w-0 flex-1 ml-2"
        >
          7
        </span>
      </div>
      <div
        class="flex justify-between items-start"
      >
        <span
          class="text-sm font-medium text-gray-500 min-w-0 flex-1"
        >
          Name
          :
        </span>
        <span
          class="text-sm text-gray-900 text-right min-w-0 flex-1 ml-2"
        >
          User 7
        </span>
      </div>
      <div
        class="flex justify-between items-start"
      >
        <span
          class="text-sm font-medium text-gray-500 min-w-0 flex-1"
        >
          Email
          :
        </span>
        <span
          class="text-sm text-gray-900 text-right min-w-0 flex-1 ml-2"
        >
          user7@example.com
        </span>
      </div>
    </div>
    <div
      class="bg-white rounded-lg border border-gray-200 shadow-sm p-4 space-y-3"
    >
      <div
        class="flex justify-between items-start"
      >
        <span
          class="text-sm font-medium text-gray-500 min-w-0 flex-1"
        >
          ID
          :
        </span>
        <span
          class="text-sm text-gray-900 text-right min-w-0 flex-1 ml-2"
        >
          8
        </span>
      </div>
      <div
        class="flex justify-between items-start"
      >
        <span
          class="text-sm font-medium text-gray-500 min-w-0 flex-1"
        >
          Name
          :
        </span>
        <span
          class="text-sm text-gray-900 text-right min-w-0 flex-1 ml-2"
        >
          User 8
        </span>
      </div>
      <div
        class="flex justify-between items-start"
      >
        <span
          class="text-sm font-medium text-gray-500 min-w-0 flex-1"
        >
          Email
          :
        </span>
        <span
          class="text-sm text-gray-900 text-right min-w-0 flex-1 ml-2"
        >
          user8@example.com
        </span>
      </div>
    </div>
    <div
      class="bg-white rounded-lg border border-gray-200 shadow-sm p-4 space-y-3"
    >
      <div
        class="flex justify-between items-start"
      >
        <span
          class="text-sm font-medium text-gray-500 min-w-0 flex-1"
        >
          ID
          :
        </span>
        <span
          class="text-sm text-gray-900 text-right min-w-0 flex-1 ml-2"
        >
          9
        </span>
      </div>
      <div
        class="flex justify-between items-start"
      >
        <span
          class="text-sm font-medium text-gray-500 min-w-0 flex-1"
        >
          Name
          :
        </span>
        <span
          class="text-sm text-gray-900 text-right min-w-0 flex-1 ml-2"
        >
          User 9
        </span>
      </div>
      <div
        class="flex justify-between items-start"
      >
        <span
          class="text-sm font-medium text-gray-500 min-w-0 flex-1"
        >
          Email
          :
        </span>
        <span
          class="text-sm text-gray-900 text-right min-w-0 flex-1 ml-2"
        >
          user9@example.com
        </span>
      </div>
    </div>
    <div
      class="bg-white rounded-lg border border-gray-200 shadow-sm p-4 space-y-3"
    >
      <div
        class="flex justify-between items-start"
      >
        <span
          class="text-sm font-medium text-gray-500 min-w-0 flex-1"
        >
          ID
          :
        </span>
        <span
          class="text-sm text-gray-900 text-right min-w-0 flex-1 ml-2"
        >
          10
        </span>
      </div>
      <div
        class="flex justify-between items-start"
      >
        <span
          class="text-sm font-medium text-gray-500 min-w-0 flex-1"
        >
          Name
          :
        </span>
        <span
          class="text-sm text-gray-900 text-right min-w-0 flex-1 ml-2"
        >
          User 10
        </span>
      </div>
      <div
        class="flex justify-between items-start"
      >
        <span
          class="text-sm font-medium text-gray-500 min-w-0 flex-1"
        >
          Email
          :
        </span>
        <span
          class="text-sm text-gray-900 text-right min-w-0 flex-1 ml-2"
        >
          user10@example.com
        </span>
      </div>
    </div>
  </div>
  <div
    class="flex items-center justify-between px-4 py-3 bg-white border-t border-gray-200 sm:px-6"
  >
    <div
      class="flex justify-between items-center flex-1 sm:hidden"
    >
      <button
        class="relative inline-flex items-center px-3 py-2 text-sm font-medium text-gray-700 bg-white border border-gray-300 rounded-md hover:bg-gray-50 disabled:opacity-50 disabled:cursor-not-allowed"
        disabled=""
      >
        ← Prev
      </button>
      <span
        class="text-sm text-gray-700 px-2"
      >
        <span
          class="font-medium"
        >
          1
        </span>
         of 
        <span
          class="font-medium"
        >
          3
        </span>
      </span>
      <button
        class="relative inline-flex items-center px-3 py-2 text-sm font-medium text-gray-700 bg-white border border-gray-300 rounded-md hover:bg-gray-50 disabled:opacity-50 disabled:cursor-not-allowed"
      >
        Next →
      </button>
    </div>
    <div
      class="hidden sm:flex sm:flex-1 sm:items-center sm:justify-between"
    >
      <p
        class="text-sm text-gray-700"
      >
        Showing
         
        <span
          class="font-medium"
        >
          1
        </span>
         to
         
        <span
          class="font-medium"
        >
          10
        </span>
         
        of 
        <span
          class="font-medium"
        >
          25
        </span>
         results
      </p>
      <nav
        class="relative z-0 inline-flex -space-x-px rounded-md shadow-sm"
      >
        <button
          class="relative inline-flex items-center px-2 py-2 text-sm font-medium text-gray-500 bg-white border border-gray-300 rounded-l-md hover:bg-gray-50 disabled:opacity-50 disabled:cursor-not-allowed"
          disabled=""
        >
          <svg
            aria-hidden="true"
            class="w-5 h-5"
            fill="currentColor"
            viewBox="0 0 20 20"
          >
            <path
              clip-rule="evenodd"
              d="M12.707 5.293a1 1 0 010 1.414L9.414 10l3.293 3.293a1 1 0 01-1.414 1.414l-4-4a1 1 0 010-1.414l4-4a1 1 0 011.414 0z"
              fill-rule="evenodd"
            />
          </svg>
        </button>
        <button
          class="relative inline-flex items-center px-4 py-2 text-sm font-medium border z-10 bg-blue-50 border-blue-500 text-blue-600"
        >
          1
        </button>
        <button
          class="relative inline-flex items-center px-4 py-2 text-sm font-medium border bg-white border-gray-300 text-gray-500 hover:bg-gray-50"
        >
          2
        </button>
        <button
          class="relative inline-flex items-center px-4 py-2 text-sm font-medium border bg-white border-gray-300 text-gray-500 hover:bg-gray-50"
        >
          3
        </button>
        <button
          class="relative inline-flex items-center px-2 py-2 text-sm font-medium text-gray-500 bg-white border border-gray-300 rounded-r-md hover:bg-gray-50 disabled:opacity-50 disabled:cursor-not-allowed"
        >
          <svg
            aria-hidden="true"
            class="w-5 h-5"
            fill="currentColor"
            viewBox="0 0 20 20"
          >
            <path
              clip-rule="evenodd"
              d="M7.293 14.707a1 1 0 010-1.414L10.586 10 7.293 6.707a1 1 0 011.414-1.414l4 4a1 1 0 010 1.414l-4 4a1 1 0 01-1.414 0z"
              fill-rule="evenodd"
            />
          </svg>
        </button>
      </nav>
    </div>
  </div>
</div>
`;

exports[`PaginatedTable Snapshot Tests renders table with single page (no pagination controls) 1`] = `
<div
  class="w-full "
>
  <div
    class="md:hidden mb-4 flex items-center justify-between bg-white p-4 rounded-lg border border-gray-200 shadow-sm"
  >
    <span
      class="text-sm font-medium text-gray-700"
    >
      Sort by:
    </span>
    <select
      class="text-sm border border-gray-300 rounded-md px-3 py-1 focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-transparent"
    >
      <option
        value=""
      >
        No sorting
      </option>
      <option
        value="id"
      >
        ID
      </option>
      <option
        value="name"
      >
        Name
      </option>
    </select>
  </div>
  <div
    class="hidden md:block overflow-x-auto shadow-sm border border-gray-200 rounded-lg"
  >
    <table
      class="min-w-full divide-y divide-gray-200"
    >
      <thead
        class="bg-gray-50"
      >
        <tr>
          <th
            class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider cursor-pointer hover:bg-gray-100 "
          >
            <div
              class="flex items-center space-x-1"
            >
              <span>
                ID
              </span>
              <div
                class="flex flex-col"
              >
                <svg
                  aria-hidden="true"
                  class="w-3 h-3 text-gray-400"
                  fill="currentColor"
                  viewBox="0 0 20 20"
                >
                  <path
                    clip-rule="evenodd"
                    d="M14.707 12.707a1 1 0 01-1.414 0L10 9.414l-3.293 3.293a1 1 0 01-1.414-1.414l4-4a1 1 0 011.414 0l4 4a1 1 0 010 1.414z"
                    fill-rule="evenodd"
                  />
                </svg>
                <svg
                  aria-hidden="true"
                  class="w-3 h-3 -mt-1 text-gray-400"
                  fill="currentColor"
                  viewBox="0 0 20 20"
                >
                  <path
                    clip-rule="evenodd"
                    d="M5.293 7.293a1 1 0 011.414 0L10 10.586l3.293-3.293a1 1 0 111.414 1.414l-4 4a1 1 0 01-1.414 0l-4-4a1 1 0 010-1.414z"
                    fill-rule="evenodd"
                  />
                </svg>
              </div>
            </div>
          </th>
          <th
            class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider cursor-pointer hover:bg-gray-100 "
          >
            <div
              class="flex items-center space-x-1"
            >
              <span>
                Name
              </span>
              <div
                class="flex flex-col"
              >
                <svg
                  aria-hidden="true"
                  class="w-3 h-3 text-gray-400"
                  fill="currentColor"
                  viewBox="0 0 20 20"
                >
                  <path
                    clip-rule="evenodd"
                    d="M14.707 12.707a1 1 0 01-1.414 0L10 9.414l-3.293 3.293a1 1 0 01-1.414-1.414l4-4a1 1 0 011.414 0l4 4a1 1 0 010 1.414z"
                    fill-rule="evenodd"
                  />
                </svg>
                <svg
                  aria-hidden="true"
                  class="w-3 h-3 -mt-1 text-gray-400"
                  fill="currentColor"
                  viewBox="0 0 20 20"
                >
                  <path
                    clip-rule="evenodd"
                    d="M5.293 7.293a1 1 0 011.414 0L10 10.586l3.293-3.293a1 1 0 111.414 1.414l-4 4a1 1 0 01-1.414 0l-4-4a1 1 0 010-1.414z"
                    fill-rule="evenodd"
                  />
                </svg>
              </div>
            </div>
          </th>
          <th
            class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider  "
          >
            <div
              class="flex items-center space-x-1"
            >
              <span>
                Email
              </span>
            </div>
          </th>
        </tr>
      </thead>
      <tbody
        class="bg-white divide-y divide-gray-200"
      >
        <tr
          class="hover:bg-gray-50 transition-colors duration-150"
        >
          <td
            class="px-6 py-4 whitespace-nowrap text-sm text-gray-900 "
          >
            1
          </td>
          <td
            class="px-6 py-4 whitespace-nowrap text-sm text-gray-900 "
          >
            John Doe
          </td>
          <td
            class="px-6 py-4 whitespace-nowrap text-sm text-gray-900 "
          >
            john@example.com
          </td>
        </tr>
        <tr
          class="hover:bg-gray-50 transition-colors duration-150"
        >
          <td
            class="px-6 py-4 whitespace-nowrap text-sm text-gray-900 "
          >
            2
          </td>
          <td
            class="px-6 py-4 whitespace-nowrap text-sm text-gray-900 "
          >
            Jane Smith
          </td>
          <td
            class="px-6 py-4 whitespace-nowrap text-sm text-gray-900 "
          >
            jane@example.com
          </td>
        </tr>
      </tbody>
    </table>
  </div>
  <div
    class="md:hidden space-y-4"
  >
    <div
      class="bg-white rounded-lg border border-gray-200 shadow-sm p-4 space-y-3"
    >
      <div
        class="flex justify-between items-start"
      >
        <span
          class="text-sm font-medium text-gray-500 min-w-0 flex-1"
        >
          ID
          :
        </span>
        <span
          class="text-sm text-gray-900 text-right min-w-0 flex-1 ml-2"
        >
          1
        </span>
      </div>
      <div
        class="flex justify-between items-start"
      >
        <span
          class="text-sm font-medium text-gray-500 min-w-0 flex-1"
        >
          Name
          :
        </span>
        <span
          class="text-sm text-gray-900 text-right min-w-0 flex-1 ml-2"
        >
          John Doe
        </span>
      </div>
      <div
        class="flex justify-between items-start"
      >
        <span
          class="text-sm font-medium text-gray-500 min-w-0 flex-1"
        >
          Email
          :
        </span>
        <span
          class="text-sm text-gray-900 text-right min-w-0 flex-1 ml-2"
        >
          john@example.com
        </span>
      </div>
    </div>
    <div
      class="bg-white rounded-lg border border-gray-200 shadow-sm p-4 space-y-3"
    >
      <div
        class="flex justify-between items-start"
      >
        <span
          class="text-sm font-medium text-gray-500 min-w-0 flex-1"
        >
          ID
          :
        </span>
        <span
          class="text-sm text-gray-900 text-right min-w-0 flex-1 ml-2"
        >
          2
        </span>
      </div>
      <div
        class="flex justify-between items-start"
      >
        <span
          class="text-sm font-medium text-gray-500 min-w-0 flex-1"
        >
          Name
          :
        </span>
        <span
          class="text-sm text-gray-900 text-right min-w-0 flex-1 ml-2"
        >
          Jane Smith
        </span>
      </div>
      <div
        class="flex justify-between items-start"
      >
        <span
          class="text-sm font-medium text-gray-500 min-w-0 flex-1"
        >
          Email
          :
        </span>
        <span
          class="text-sm text-gray-900 text-right min-w-0 flex-1 ml-2"
        >
          jane@example.com
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`PaginatedTable Snapshot Tests renders table with small page size 1`] = `
<div
  class="w-full "
>
  <div
    class="md:hidden mb-4 flex items-center justify-between bg-white p-4 rounded-lg border border-gray-200 shadow-sm"
  >
    <span
      class="text-sm font-medium text-gray-700"
    >
      Sort by:
    </span>
    <select
      class="text-sm border border-gray-300 rounded-md px-3 py-1 focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-transparent"
    >
      <option
        value=""
      >
        No sorting
      </option>
      <option
        value="id"
      >
        ID
      </option>
      <option
        value="name"
      >
        Name
      </option>
    </select>
  </div>
  <div
    class="hidden md:block overflow-x-auto shadow-sm border border-gray-200 rounded-lg"
  >
    <table
      class="min-w-full divide-y divide-gray-200"
    >
      <thead
        class="bg-gray-50"
      >
        <tr>
          <th
            class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider cursor-pointer hover:bg-gray-100 "
          >
            <div
              class="flex items-center space-x-1"
            >
              <span>
                ID
              </span>
              <div
                class="flex flex-col"
              >
                <svg
                  aria-hidden="true"
                  class="w-3 h-3 text-gray-400"
                  fill="currentColor"
                  viewBox="0 0 20 20"
                >
                  <path
                    clip-rule="evenodd"
                    d="M14.707 12.707a1 1 0 01-1.414 0L10 9.414l-3.293 3.293a1 1 0 01-1.414-1.414l4-4a1 1 0 011.414 0l4 4a1 1 0 010 1.414z"
                    fill-rule="evenodd"
                  />
                </svg>
                <svg
                  aria-hidden="true"
                  class="w-3 h-3 -mt-1 text-gray-400"
                  fill="currentColor"
                  viewBox="0 0 20 20"
                >
                  <path
                    clip-rule="evenodd"
                    d="M5.293 7.293a1 1 0 011.414 0L10 10.586l3.293-3.293a1 1 0 111.414 1.414l-4 4a1 1 0 01-1.414 0l-4-4a1 1 0 010-1.414z"
                    fill-rule="evenodd"
                  />
                </svg>
              </div>
            </div>
          </th>
          <th
            class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider cursor-pointer hover:bg-gray-100 "
          >
            <div
              class="flex items-center space-x-1"
            >
              <span>
                Name
              </span>
              <div
                class="flex flex-col"
              >
                <svg
                  aria-hidden="true"
                  class="w-3 h-3 text-gray-400"
                  fill="currentColor"
                  viewBox="0 0 20 20"
                >
                  <path
                    clip-rule="evenodd"
                    d="M14.707 12.707a1 1 0 01-1.414 0L10 9.414l-3.293 3.293a1 1 0 01-1.414-1.414l4-4a1 1 0 011.414 0l4 4a1 1 0 010 1.414z"
                    fill-rule="evenodd"
                  />
                </svg>
                <svg
                  aria-hidden="true"
                  class="w-3 h-3 -mt-1 text-gray-400"
                  fill="currentColor"
                  viewBox="0 0 20 20"
                >
                  <path
                    clip-rule="evenodd"
                    d="M5.293 7.293a1 1 0 011.414 0L10 10.586l3.293-3.293a1 1 0 111.414 1.414l-4 4a1 1 0 01-1.414 0l-4-4a1 1 0 010-1.414z"
                    fill-rule="evenodd"
                  />
                </svg>
              </div>
            </div>
          </th>
          <th
            class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider  "
          >
            <div
              class="flex items-center space-x-1"
            >
              <span>
                Email
              </span>
            </div>
          </th>
        </tr>
      </thead>
      <tbody
        class="bg-white divide-y divide-gray-200"
      >
        <tr
          class="hover:bg-gray-50 transition-colors duration-150"
        >
          <td
            class="px-6 py-4 whitespace-nowrap text-sm text-gray-900 "
          >
            1
          </td>
          <td
            class="px-6 py-4 whitespace-nowrap text-sm text-gray-900 "
          >
            John Doe
          </td>
          <td
            class="px-6 py-4 whitespace-nowrap text-sm text-gray-900 "
          >
            john@example.com
          </td>
        </tr>
        <tr
          class="hover:bg-gray-50 transition-colors duration-150"
        >
          <td
            class="px-6 py-4 whitespace-nowrap text-sm text-gray-900 "
          >
            2
          </td>
          <td
            class="px-6 py-4 whitespace-nowrap text-sm text-gray-900 "
          >
            Jane Smith
          </td>
          <td
            class="px-6 py-4 whitespace-nowrap text-sm text-gray-900 "
          >
            jane@example.com
          </td>
        </tr>
      </tbody>
    </table>
  </div>
  <div
    class="md:hidden space-y-4"
  >
    <div
      class="bg-white rounded-lg border border-gray-200 shadow-sm p-4 space-y-3"
    >
      <div
        class="flex justify-between items-start"
      >
        <span
          class="text-sm font-medium text-gray-500 min-w-0 flex-1"
        >
          ID
          :
        </span>
        <span
          class="text-sm text-gray-900 text-right min-w-0 flex-1 ml-2"
        >
          1
        </span>
      </div>
      <div
        class="flex justify-between items-start"
      >
        <span
          class="text-sm font-medium text-gray-500 min-w-0 flex-1"
        >
          Name
          :
        </span>
        <span
          class="text-sm text-gray-900 text-right min-w-0 flex-1 ml-2"
        >
          John Doe
        </span>
      </div>
      <div
        class="flex justify-between items-start"
      >
        <span
          class="text-sm font-medium text-gray-500 min-w-0 flex-1"
        >
          Email
          :
        </span>
        <span
          class="text-sm text-gray-900 text-right min-w-0 flex-1 ml-2"
        >
          john@example.com
        </span>
      </div>
    </div>
    <div
      class="bg-white rounded-lg border border-gray-200 shadow-sm p-4 space-y-3"
    >
      <div
        class="flex justify-between items-start"
      >
        <span
          class="text-sm font-medium text-gray-500 min-w-0 flex-1"
        >
          ID
          :
        </span>
        <span
          class="text-sm text-gray-900 text-right min-w-0 flex-1 ml-2"
        >
          2
        </span>
      </div>
      <div
        class="flex justify-between items-start"
      >
        <span
          class="text-sm font-medium text-gray-500 min-w-0 flex-1"
        >
          Name
          :
        </span>
        <span
          class="text-sm text-gray-900 text-right min-w-0 flex-1 ml-2"
        >
          Jane Smith
        </span>
      </div>
      <div
        class="flex justify-between items-start"
      >
        <span
          class="text-sm font-medium text-gray-500 min-w-0 flex-1"
        >
          Email
          :
        </span>
        <span
          class="text-sm text-gray-900 text-right min-w-0 flex-1 ml-2"
        >
          jane@example.com
        </span>
      </div>
    </div>
  </div>
  <div
    class="flex items-center justify-between px-4 py-3 bg-white border-t border-gray-200 sm:px-6"
  >
    <div
      class="flex justify-between items-center flex-1 sm:hidden"
    >
      <button
        class="relative inline-flex items-center px-3 py-2 text-sm font-medium text-gray-700 bg-white border border-gray-300 rounded-md hover:bg-gray-50 disabled:opacity-50 disabled:cursor-not-allowed"
        disabled=""
      >
        ← Prev
      </button>
      <span
        class="text-sm text-gray-700 px-2"
      >
        <span
          class="font-medium"
        >
          1
        </span>
         of 
        <span
          class="font-medium"
        >
          2
        </span>
      </span>
      <button
        class="relative inline-flex items-center px-3 py-2 text-sm font-medium text-gray-700 bg-white border border-gray-300 rounded-md hover:bg-gray-50 disabled:opacity-50 disabled:cursor-not-allowed"
      >
        Next →
      </button>
    </div>
    <div
      class="hidden sm:flex sm:flex-1 sm:items-center sm:justify-between"
    >
      <p
        class="text-sm text-gray-700"
      >
        Showing
         
        <span
          class="font-medium"
        >
          1
        </span>
         to
         
        <span
          class="font-medium"
        >
          2
        </span>
         
        of 
        <span
          class="font-medium"
        >
          3
        </span>
         results
      </p>
      <nav
        class="relative z-0 inline-flex -space-x-px rounded-md shadow-sm"
      >
        <button
          class="relative inline-flex items-center px-2 py-2 text-sm font-medium text-gray-500 bg-white border border-gray-300 rounded-l-md hover:bg-gray-50 disabled:opacity-50 disabled:cursor-not-allowed"
          disabled=""
        >
          <svg
            aria-hidden="true"
            class="w-5 h-5"
            fill="currentColor"
            viewBox="0 0 20 20"
          >
            <path
              clip-rule="evenodd"
              d="M12.707 5.293a1 1 0 010 1.414L9.414 10l3.293 3.293a1 1 0 01-1.414 1.414l-4-4a1 1 0 010-1.414l4-4a1 1 0 011.414 0z"
              fill-rule="evenodd"
            />
          </svg>
        </button>
        <button
          class="relative inline-flex items-center px-4 py-2 text-sm font-medium border z-10 bg-blue-50 border-blue-500 text-blue-600"
        >
          1
        </button>
        <button
          class="relative inline-flex items-center px-4 py-2 text-sm font-medium border bg-white border-gray-300 text-gray-500 hover:bg-gray-50"
        >
          2
        </button>
        <button
          class="relative inline-flex items-center px-2 py-2 text-sm font-medium text-gray-500 bg-white border border-gray-300 rounded-r-md hover:bg-gray-50 disabled:opacity-50 disabled:cursor-not-allowed"
        >
          <svg
            aria-hidden="true"
            class="w-5 h-5"
            fill="currentColor"
            viewBox="0 0 20 20"
          >
            <path
              clip-rule="evenodd"
              d="M7.293 14.707a1 1 0 010-1.414L10.586 10 7.293 6.707a1 1 0 011.414-1.414l4 4a1 1 0 010 1.414l-4 4a1 1 0 01-1.414 0z"
              fill-rule="evenodd"
            />
          </svg>
        </button>
      </nav>
    </div>
  </div>
</div>
`;
